# airbnb-clone

airclonebackend/: pyproject.toml
airclonebackend/Tweets/: admin.py  models.py  serializers.py  urls.py  views.py
airclonebackend/Tweets/migrations/: 0001_initial.py  0002_like_name.py
airclonebackend/Tweets/templates/: all_tweets.html
airclonebackend/bookings/: admin.py  models.py
airclonebackend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
airclonebackend/categories/: admin.py  models.py  serializers.py  urls.py  views.py
airclonebackend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
airclonebackend/common/: models.py
airclonebackend/config/: settings.py  urls.py
airclonebackend/direct_message/: admin.py  apps.py  models.py
airclonebackend/direct_message/migrations/: 0001_initial.py
airclonebackend/experiences/: admin.py  models.py  serializers.py  urls.py  views.py
airclonebackend/experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py
airclonebackend/houses/: admin.py  models.py
airclonebackend/houses/migrations/: 0001_initial.py
airclonebackend/medias/: admin.py  models.py
airclonebackend/reviews/: admin.py  models.py
airclonebackend/rooms/: admin.py  models.py  serializers.py  urls.py  views.py
airclonebackend/tweet/: admin.py  models.py
airclonebackend/users/: admin.py  models.py  serializers.py  urls.py  views.py
airclonebackend/wishlists/: admin.py  models.py
(+20 files in other folders)
